# Lingualink_Server

./: .env.template  .env.test  .gitignore  QUICK_START.md  README.md  SERVICE_MANAGEMENT.md  STARTUP_OPTIMIZATION.md  app.py  demo.env  generate_keys.py  lingualink.pid  lingualink.service  manage.py  manage_api_keys.py  manage_load_balancer.py  omni_llm_service.py  optimization_suggestions.md  pyproject.toml  start.bat  start.sh  stop.sh  test.opus
config/: settings.py
docs/: API.md  AUTHENTICATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPUS_SUPPORT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_UPDATE_SUMMARY.md  QUICK_PERFORMANCE_GUIDE.md  REDIS_CACHE_GUIDE.md  Temp.md  USAGE.md  load_balancer_config.md
scripts/: install_audio_deps.sh  test_concurrent_performance.py
src/lingualink/: __init__.py  main.py
src/lingualink/api/: __init__.py  audio_routes.py  auth_routes.py  cache_routes.py  health_routes.py  load_balancer_routes.py
src/lingualink/auth/: __init__.py  auth_service.py  dependencies.py  redis_cache.py
src/lingualink/core/: __init__.py  audio_converter.py  audio_processor.py  llm_service.py  llm_service_v2.py  load_balancer.py
src/lingualink/models/: __init__.py  auth_models.py  database.py  request_models.py
src/lingualink/utils/: __init__.py  key_generator.py  logging_config.py
tests/: __init__.py  test_audio_conversion.py  test_auth.py
